mdapipkg/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates to Product Chapters - needed for logic</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Product_Type__c</field>
                <operation>equals</operation>
                <value>Primary, Secondary, Primary Initiation, Secondary Initiation</value>
            </filterItems>
            <filterItems>
                <field>$Source.Family</field>
                <operation>equals</operation>
                <value>Annual Dues, Lifetime Dues, Chapter Dues</value>
            </filterItems>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Chapter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Dues__c</fullName>
        <formula>TEXT(Account__r.Chapter_Dues__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Dues</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_GUID__c</fullName>
        <label>Chapter GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complimentary_WPO_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complimentary YPO Gold Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field ties a household contact for whom this Product is purchased.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <label>Exclusive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YNG</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Date_Start__c</fullName>
        <label>Fiscal Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <label>GL Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary GL Account</label>
        <referenceTo>GL_Coding__c</referenceTo>
        <relationshipLabel>Products (GL Revenue Account)</relationshipLabel>
        <relationshipName>Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Sub_Account__c</fullName>
        <label>GL Sub Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__AvailableForPurchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will control whether or not an &quot;Add to Cart&quot; button is displayed as well as whether or not the cart component allows the product addition.</description>
        <inlineHelpText>This field will control whether or not an &quot;Add to Cart&quot; button is displayed as well as whether or not the cart component allows the product addition.</inlineHelpText>
        <label>Available for E-Commerce Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__AvailableQuantity__c</fullName>
        <label>Available Quantity</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BestSellerScore__c</fullName>
        <label>Best Seller Score</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>KGRenewal__ProductCategory__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__CreateAssets__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When an Opportunity with this Product is marked as closed won, an Asset will be created on the Account to record the purchase.</inlineHelpText>
        <label>Create Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__DoNotCapturePaymentAtCheckout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>E-Commerce purchases create an &quot;Authorize Only&quot; Transaction if this product is in the cart. An internal user must then capture the Transaction manually.</description>
        <inlineHelpText>E-Commerce purchases create an &quot;Authorize Only&quot; Transaction if this product is in the cart. An internal user must then capture the Transaction manually.</inlineHelpText>
        <label>Do Not Capture Payment at Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ECommerceDescription__c</fullName>
        <description>The description for this product that will display in Venue.</description>
        <inlineHelpText>The description for this product that will display in Venue.</inlineHelpText>
        <label>E-Commerce Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ECommerceName__c</fullName>
        <description>The name for this product that will be displayed in Venue.</description>
        <inlineHelpText>The name for this product that will be displayed in Venue.</inlineHelpText>
        <label>E-Commerce Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__FourthImageLarge__c</fullName>
        <label>Fourth Image, Large</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__FourthImageMed__c</fullName>
        <label>Fourth Image, Medium</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__FourthImageSmall__c</fullName>
        <label>Fourth Image, Small</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsBackordered__c</fullName>
        <formula>AND(KGRenewal__QuantityType__c == &apos;Limited Quantity&apos;, KGRenewal__AvailableQuantity__c &lt;= 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Backordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsFeatured__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This product can be specially styled in Venue and will appear at the top of Product Lists if specified in the Site Configuration.</inlineHelpText>
        <label>Is Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsLowQuantity__c</fullName>
        <formula>AND(NOT(KGRenewal__IsBackordered__c), KGRenewal__QuantityType__c == &apos;Limited Quantity&apos;, KGRenewal__AvailableQuantity__c &lt;= KGRenewal__LowQuantityLevel__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Low Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsProductBundleParent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this Product is a parent in a bundle. If true, this product should not be added as a child record in a Product Bundle. This field will be automatically set and should be read-only on layouts.</description>
        <inlineHelpText>Whether or not this Product is a parent in a bundle. If true, this product should not be added as a child record in a Product Bundle. This field will be set automatically and should not be edited.</inlineHelpText>
        <label>Product Bundle Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsReplacedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If another product is now sold in this Product&apos;s place, enter that Product here.</inlineHelpText>
        <label>Is Replaced By</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Replaces (Products)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__IsTaxable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__LowQuantityLevel__c</fullName>
        <label>Low Quantity Level</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__MainImageLarge__c</fullName>
        <label>Main Image, Large</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__MainImageMed__c</fullName>
        <label>Main Image, Medium</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__MainImageSmall__c</fullName>
        <label>Main Image, Small</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PercentOfShippingBox__c</fullName>
        <label>Percent of Shipping Box</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PriceTermType__c</fullName>
        <inlineHelpText>If left blank, subscription Products will be priced in months.</inlineHelpText>
        <label>Price Term Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PriceTerm__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>If this product is a subscription, enter how many days or months the pricing is for. For example, a product that is priced per year would get a Price Term of 12 months or 365 days.</inlineHelpText>
        <label>Price Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__PricingTable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Table</label>
        <referenceTo>KGRenewal__PricingTable__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__QuantityType__c</fullName>
        <label>Quantity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ReplacementType__c</fullName>
        <inlineHelpText>Forced - This product is automatically replaced. 
Recommended - This product will be selected for replacement, but can be deselected during renewals. 
Suggested - This product will not be selected for replacement, but can be selected during renewals.</inlineHelpText>
        <label>Replacement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forced</fullName>
                </value>
                <value>
                    <fullName>Recommended</fullName>
                </value>
                <value>
                    <fullName>Suggested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KGRenewal__SecondImageLarge__c</fullName>
        <label>Second Image, Large</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__SecondImageMed__c</fullName>
        <label>Second Image, Medium</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__SecondImageSmall__c</fullName>
        <label>Second Image, Small</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingBox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Box</label>
        <referenceTo>KGRenewal__ShippingBox__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ShippingWeight__c</fullName>
        <label>Shipping Weight</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this product is sold as a subscription, its price should reflect the monthly cost.</description>
        <inlineHelpText>If this product is sold as a subscription, its price should reflect the monthly cost.</inlineHelpText>
        <label>Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__TaxCode__c</fullName>
        <description>This is the product tax code that will be sent to any tax system.</description>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ThirdImageLarge__c</fullName>
        <label>Third Image, Large</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ThirdImageMed__c</fullName>
        <label>Third Image, Medium</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__ThirdImageSmall__c</fullName>
        <label>Third Image, Small</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>KGRenewal__eCommerceEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked, the product will be available for
			sale through the E-Commerce shopping page.</description>
        <inlineHelpText>If this is checked, the product will be available for
			sale through the eCommerce shopping page.</inlineHelpText>
        <label>E-Commerce Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Fiscal_Year_Date_Start__c</fullName>
        <formula>Date(Year( Fiscal_Date_Start__c )+1,07,01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Fiscal Year Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PDF_Link__c</fullName>
        <label>PDF Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Parent Product)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Family</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Primary Initiation</fullName>
                </value>
                <value>
                    <fullName>Secondary Initiation</fullName>
                </value>
                <value>
                    <fullName>Reinstatement</fullName>
                </value>
                <value>
                    <fullName>Initiation</fullName>
                </value>
                <value>
                    <fullName>Honorary</fullName>
                </value>
                <value>
                    <fullName>Paid in Full</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Template</label>
        <referenceTo>ffrr__Template__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Displayed on Invoice PDF</description>
        <inlineHelpText>Displayed on Invoice PDF</inlineHelpText>
        <label>Short Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>Used to specify sort order on Invoice PDF</description>
        <inlineHelpText>Used to specify sort order on Invoice PDF</inlineHelpText>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Number__c</fullName>
        <label>Tier Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WPO_Age__c</fullName>
        <description>For forced upgrades</description>
        <label>YPO Gold Age</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Worldaware_benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field determines if a benefit is able to be removed from the Cart - if this is on there is no remove button.</inlineHelpText>
        <label>Worldaware benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YPO_Universal_Member_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a Product should be added for all Members / Prospects.
Example:  YPO Safe Travel Solution Member Benefit</description>
        <inlineHelpText>Indicates if a Product should be added for all Members / Prospects.
Example:  YPO Safe Travel Solution Member Benefit</inlineHelpText>
        <label>YPO Universal Member Benefit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODAIncludeInIncomeSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated: Include in Income Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInputTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products (Purchase Tax Code)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPurchaseAnalysisAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Analysis Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products (Purchase Analysis Account)</relationshipLabel>
        <relationshipName>ProductsPurchase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesRevenueAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The general ledger account to which sales revenues for this product be posted.</description>
        <label>Sales Revenue Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxRule__c</fullName>
        <label>External Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                    <label>Taxable</label>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <label>Deprecated: XXX Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__PlaceOfSupply__c</fullName>
        <label>VAT/GST Place of Supply Rules</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>With Account</fullName>
                    <default>true</default>
                    <label>With Account</label>
                </value>
                <value>
                    <fullName>With Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ReverseCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT/GST Reverse Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesTaxStatus__c</fullName>
        <description>The tax status for this product for SUT companies.</description>
        <inlineHelpText>The tax status for this product for SUT companies.</inlineHelpText>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tax code to be used when calculating tax in a VAT or GST company.</description>
        <inlineHelpText>The tax code to be used when calculating tax in a VAT or GST company.</inlineHelpText>
        <label>Output VAT/GST Code</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffrr_exa__RevenueRecognitionAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Products (Revenue Recognition Account)</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isProrate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked for Subscription products, Encore will prorate price for partial year</inlineHelpText>
        <label>Prorate</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Product_Type__c</columns>
        <columns>Account__c</columns>
        <columns>KGRenewal__PriceTerm__c</columns>
        <columns>Tier_Number__c</columns>
        <columns>KGRenewal__Subscription__c</columns>
        <columns>isProrate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>ChptDuesProductsAct2</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>AccountName__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Type__c</columns>
        <columns>Account__c</columns>
        <columns>KGRenewal__PriceTerm__c</columns>
        <columns>Tier_Number__c</columns>
        <columns>KGRenewal__Subscription__c</columns>
        <columns>isProrate__c</columns>
        <columns>Chapter_Dues__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Chapter Dues</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Chapter Dues Products - Active</label>
    </listViews>
    <listViews>
        <fullName>ChptDuesProductsInAct</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>AccountName__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Type__c</columns>
        <columns>Account__c</columns>
        <columns>KGRenewal__PriceTerm__c</columns>
        <columns>Tier_Number__c</columns>
        <columns>KGRenewal__Subscription__c</columns>
        <columns>isProrate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Chapter Dues</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Chapter Dues Products - Inactive</label>
    </listViews>
</CustomObject>